# stickshredder

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml  stickshredder.spec  stickshredder.wsb
.github/workflows/: build.yml  test.yml
docs/: DIN66399-INFO.md  SECURITY.md
installer/: stickshredder.iss
scripts/: regenerate_sample_cert.py
src/: cli.py  main.py
src/cert/: __init__.py  generator.py
src/core/: config.py  log.py
src/gui/: __init__.py  history_dialog.py  main_window.py  settings_dialog.py  styles.py  wipe_worker.py
src/wipe/: demo.py  device.py  format.py  methods.py  verify.py
tests/: conftest.py  test_certificate.py  test_cli.py  test_config.py  test_device.py  test_format.py  test_gui_verify.py  test_log.py  test_main.py  test_methods.py  test_verify.py
tests/integration/: test_full_verify_sparse.py  test_reformat.py  test_v1_1_hardening.py
