[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "stickshredder"
version = "1.1.0"
description = "Secure USB wipe tool with DIN 66399 / ISO 21964 deletion certificates"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Robin Oertel", email = "roertel16@gmail.com" },
]
keywords = ["usb", "wipe", "secure-erase", "din66399", "gdpr", "dsgvo"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Win32 (MS Windows)",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Hardware",
]

dependencies = [
    "PySide6>=6.6",
    "reportlab>=4.0",
    "pywin32>=306",
    "wmi>=1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-qt>=4.0",
    "pyinstaller>=6.0",
]

[project.scripts]
stickshredder = "main:main"

[project.gui-scripts]
stickshredder-gui = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[tool.hatch.build.targets.wheel]
packages = ["src"]
